# waveshare-lvgl

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.c
examples/: CMakeLists.txt
examples/inc/: LCD_test.h  LVGL_example.h
examples/src/: LCD_2in_LVGL_test.c  LVGL_example.c
lib/: lv_conf.h
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  Debug.h
lib/LCD/: CMakeLists.txt  LCD_2in.c  LCD_2in.h
lib/QMI8658/: QMI8658.c
lib/Touch/: CMakeLists.txt  CST816D.c  CST816D.h
lib/cobs/: CMakeLists.txt  cobs.c  cobs.h
lib/core1_task_queue/: CMakeLists.txt  core1_task_queue.c  core1_task_queue.h
lib/crc16/: CMakeLists.txt  crc16.c  crc16.h
lib/pio/: CMakeLists.txt  README.md  pio.c  pio.h  uart_rx.c  uart_rx.pio  uart_rx_intr.c  uart_tx.c  uart_tx.pio
lib/simulator_engine/: CMakeLists.txt  simulator_engine.c  simulator_engine.h
lib/socket/: CMakeLists.txt  socket.c  socket.h
proto/: CMakeLists.txt  example.protocol.proto  protocol.proto
src/: init.c  init.h  init_widgets.c  init_widgets.h
src/assets/: battery.c  light_switch.c  lightbulb.c
src/usb/: tusb_config.h
web/: .oxfmtrc.json  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.css  App.tsx  ConnectButton.tsx  index.css  useSerial.ts
